--- a/package.json
+++ b/package.json
@@ -15,20 +15,22 @@
     "@nextui-org/kbd": "2.0.8",
     "@nextui-org/link": "2.0.9",
     "@nextui-org/navbar": "2.0.9",
+    "@nextui-org/react": "^2.0.19",
     "@nextui-org/snippet": "2.0.10",
     "@nextui-org/switch": "2.0.9",
     "@nextui-org/system": "2.0.5",
     "@nextui-org/theme": "2.0.4",
-    "@react-aria/visually-hidden": "^3.8.3",
     "@react-aria/ssr": "^3.7.1",
+    "@react-aria/visually-hidden": "^3.8.3",
     "@types/node": "20.4.9",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "clsx": "^2.0.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
-    "framer-motion": "^10.15.1",
+    "framer-motion": "^10.15.2",
     "intl-messageformat": "^10.1.0",
     "next": "13.4.13",
     "next-themes": "^0.2.1",
